force-app/main/default/objects/Country__c/fields/Numeric_code__c.field-meta.xml
<CustomField>
    <fullName>Numeric_code__c</fullName>
    <label>Numeric code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>