force-app/main/default/objects/Country__c/fields/Tax_level__c.field-meta.xml
<CustomField>
    <fullName>Tax_level__c</fullName>
    <label>Tax level</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>